# Diban.jl

./: .gitattributes  .gitignore  LICENSE  Project.toml  README.md  dictionary_investigate.jl  parquet-reader.jl  test-read-all-files.jl  write_parquet.jl
src/: BitPackedIterator.jl  Diban.jl  ParquetWriter.jl  column_reader-dev.jl  column_reader.jl  column_reader_rewrite.jl  column_reader_to_vals.jl  encoding.jl  metadata.jl  read_parquet-test.jl  read_parquet.jl  writer-dev.jl  writer.jl  writer_consts.jl
src/cpp/: compile_arrow.sh  compile_main_cpp.sh  main.cpp
src/cpp/test-cpp-wrap/: .gitignore  compile-julia-header.sh  testlib.cpp
src/cpp/test-cppwrap-complex/: CMakeLists.txt  CppHello.jl  compile-julia-header.sh
src/cpp/test-include-julia/: CppHello.jl  compile-include-julia.sh  include-parquet-too.cpp  testlib.cpp
src/thrift/: parquet.jl
test/: runtests.jl
test-cpp-wrap/: compile-wo-cmake.sh
test-cppwrap-complex/: test.cpp  testlib.cpp  try-compile-without-cmake.sh
test-include-julia/: CMakeLists.txt  compile-julia-header.sh
